// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`builder > can be created with children and parent rules 1`] = `
{
  "entities": [
    {
      "attributes": [],
      "childrenAllowed": true,
      "defaultValue": [Function],
      "name": "test",
      "parentRequired": true,
      "shouldBeProcessed": [Function],
      "validate": [Function],
      "valueAllowed": false,
    },
  ],
  "entitiesExtensions": {},
  "generateEntityId": [Function],
  "validateEntityId": [Function],
  "validateSchema": [Function],
}
`;

exports[`builder > can be created with entities 1`] = `
{
  "entities": [
    {
      "attributes": [],
      "childrenAllowed": false,
      "defaultValue": [Function],
      "name": "test",
      "parentRequired": false,
      "shouldBeProcessed": [Function],
      "validate": [Function],
      "valueAllowed": false,
    },
  ],
  "entitiesExtensions": {},
  "generateEntityId": [Function],
  "validateEntityId": [Function],
  "validateSchema": [Function],
}
`;

exports[`builder > can be created with entity ID generator and validator 1`] = `
{
  "entities": [],
  "entitiesExtensions": {},
  "generateEntityId": [Function],
  "validateEntityId": [Function],
  "validateSchema": [Function],
}
`;

exports[`builder > can be created with entity ID generator and validator 2`] = `"1"`;

exports[`builder > can be created with entity ID generator and validator 3`] = `undefined`;

exports[`builder > can be created with entity ID generator and validator 4`] = `"Not equal to 1"`;

exports[`builder > can be created with minimal options 1`] = `
{
  "entities": [],
  "entitiesExtensions": {},
  "generateEntityId": [MockFunction generateUuid],
  "validateEntityId": [MockFunction validateUuid],
  "validateSchema": [Function],
}
`;
